--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -18,20 +18,31 @@ header nav {
     display: flex;
 }
 
-header nav img {
-    width: 6.5%;
-    height: 2.4%;
-    margin: 3.3% 8.7% 2.7% 16.5%;
-}
-
 header nav a {
     width: 3%;
     height: 1.7%;
-    margin: 3.4% 2.1% 3.3% 0;
+    margin: 30px;
     font-size: 16px;
     line-height: 26px;
     color: var(--main-color);
     text-decoration: none;
+}
+
+header nav a#logo {
+    margin-left: 230px;
+}
+
+header nav a#about {
+    margin-left: 124px;
+}
+
+header nav a#recipes {
+    margin-left: 30px;
+}
+
+header nav a:hover {
+    font-weight: bold;
+    transition: 900ms;
 }
 
 .content1 {
@@ -41,7 +52,7 @@ header nav a {
     width: 67.1%;
     height: 33.2%;
     border-radius: 30px;
-    margin: 0 16.4% 4.5% 16.4%;
+    margin: 0 16.4% 3.5% 16.4%;
 }
 
 .content1 .content {
@@ -86,7 +97,7 @@ header nav a {
 }
 
 .content2 .cards .card img {
-    width: 260px;
+    width: 278px;
     height: 120px;
     border-radius: 15px;
 }
@@ -99,6 +110,7 @@ header nav a {
 
 .content2 .cards .card h4 {
     font-size: 14px;
+    font-weight: lighter;
     color: #777777;
     margin-top: 0.5%;
     margin-bottom: 2.7%;
@@ -109,12 +121,14 @@ footer {
     height: 52px;
     width: 100%;
     margin-top: 4.5%;
+    display: flex;
+    align-items: center;
 }
 
 footer p {
     font-size: 14px;
     line-height: 24px;
     color: #999999;
+    flex: 1;
     text-align: center;
-    margin-bottom: 2.1%;
 }
