--- a/views/index.html
+++ b/views/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/home.css">
-    <link rel="stylesheet" href="../styles/modal.css">
+    <link rel="stylesheet" href="../public/styles/main.css">
+    <link rel="stylesheet" href="../public/styles/home.css">
+    <link rel="stylesheet" href="../public/styles/modal.css">
     <title>Foodfy</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="../scripts/index.html" id="logo"><img src="../assets/logo.png" alt="Logo Foodfy"></a>
-            <a href="../scripts/about.html" id="about">About</a>
-            <a href="../scripts/recipes.html" id="recipes">Recipes</a>
+            <a href="../views/index.html" id="logo"><img src="../public/assets/logo.png" alt="Logo Foodfy"></a>
+            <a href="../views/about.html" id="about">About</a>
+            <a href="../views/recipes.html" id="recipes">Recipes</a>
         </nav>
     </header>
     <section class="content1">
@@ -23,39 +23,39 @@
             <p>Learn how to build the best dishes with recipes created by professionals from all over the world.</p>
         </div>
         <div class="img-background">
-            <img src="../assets/chef.png" alt="Chef Foodfy">
+            <img src="../public/assets/chef.png" alt="Chef Foodfy">
         </div>
     </section>
     <section class="content2">
         <h2>Most accessed</h2>
         <div class="cards">
             <div class="card" id="burger">
-                <img src="../assets/burger.png" alt="Burger">
+                <img src="../public/assets/burger.png" alt="Burger">
                 <h3>Triple Bacon Burger</h3>
                 <h4>by Jorge Relato</h4>
             </div>
             <div class="card" id="pizza">
-                <img src="../assets/pizza.png" alt="Pizza">
+                <img src="../public/assets/pizza.png" alt="Pizza">
                 <h3>Pizza 4 Seasons</h3>
                 <h4>by Fabiana Melo</h4>
             </div>
             <div class="card" id="espaguete">
-                <img src="../assets/espaguete.png" alt="Espaguete">
+                <img src="../public/assets/espaguete.png" alt="Espaguete">
                 <h3>Spaghetti with Garlic</h3>
                 <h4>by Júlia Kinoto</h4>
             </div>
             <div class="card" id="lasanha">
-                <img src="../assets/lasanha.png" alt="Lasanha">
+                <img src="../public/assets/lasanha.png" alt="Lasanha">
                 <h3>Mac n' Cheese Lasagna</h3>
                 <h4>by Juliano Vieira</h4>
             </div>
             <div class="card" id="doce">
-                <img src="../assets/doce.png" alt="Pão-do-Céu">
+                <img src="../public/assets/doce.png" alt="Pão-do-Céu">
                 <h3>Pão-do-Céu Sweets</h3>
                 <h4>by Ricardo Golvea</h4>
             </div>
             <div class="card" id="asinhas">
-                <img src="../assets/asinhas.png" alt="Asinhas de Frango">
+                <img src="../public/assets/asinhas.png" alt="Asinhas de Frango">
                 <h3>Barbecue Chicken Wings</h3>
                 <h4>by Vania Steroski</h4>
             </div>
@@ -76,6 +76,6 @@
     <footer>
             <p>All rights reserved, Foodfy recipes.</p>
     </footer>
-    <script src="../scripts/scripts.js"></script>
+    <script src="../public/scripts/scripts.js"></script>
 </body>
 </html>
