frontend integrated with server

--- a/views/about.html
+++ b/views/about.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/styles/main.css">
-    <link rel="stylesheet" href="../public/styles/about.css">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/about.css">
     <title>Foodfy</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="../views/index.html" id="logo"><img src="../public/assets/logo.png" alt="Logo Foodfy"></a>
-            <a href="../views/about.html" id="about">About</a>
-            <a href="../views/recipes.html" id="recipes">Recipes</a>
+            <a href="/" id="logo"><img src="/logo.png" alt="Logo Foodfy"></a>
+            <a href="/about" id="about">About</a>
+            <a href="/recipes" id="recipes">Recipes</a>
         </nav>
     </header>
     <section class="content">
