--- a/views/recipes.html
+++ b/views/recipes.html
@@ -4,78 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="../public/styles/main.css">
-    <link rel="stylesheet" href="../public/styles/recipes.css">
-    <link rel="stylesheet" href="../public/styles/modal.css">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/recipes.css">
+    <link rel="stylesheet" href="/modal.css">
     <title>Foodfy</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="../views/index.html" id="logo"><img src="../public/assets/logo.png" alt="Logo Foodfy"></a>
-            <a href="../views/about.html" id="about">About</a>
-            <a href="../views/recipes.html" id="recipes">Recipes</a>
+            <a href="/" id="logo"><img src="/logo.png" alt="Logo Foodfy"></a>
+            <a href="/about" id="about">About</a>
+            <a href="/recipes" id="recipes">Recipes</a>
         </nav>
     </header>
     <section class="content2">
         <div class="cards">
             <div class="card" id="burger">
-                <img src="../public/assets/burger.png" alt="Burger">
+                <img src="/burger.png" alt="Burger">
                 <h3>Triple Bacon Burger</h3>
                 <h4>by Jorge Relato</h4>
             </div>
             <div class="card" id="pizza">
-                <img src="../public/assets/pizza.png" alt="Pizza">
+                <img src="/pizza.png" alt="Pizza">
                 <h3>Pizza 4 Seasons</h3>
                 <h4>by Fabiana Melo</h4>
             </div>
             <div class="card" id="espaguete">
-                <img src="../public/assets/espaguete.png" alt="Espaguete">
+                <img src="/espaguete.png" alt="Espaguete">
                 <h3>Spaghetti with Garlic</h3>
                 <h4>by Júlia Kinoto</h4>
             </div>
             <div class="card" id="lasanha">
-                <img src="../public/assets/lasanha.png" alt="Lasanha">
+                <img src="/lasanha.png" alt="Lasanha">
                 <h3>Mac n' Cheese Lasagna</h3>
                 <h4>by Juliano Vieira</h4>
             </div>
             <div class="card" id="doce">
-                <img src="../public/assets/doce.png" alt="Pão-do-Céu">
+                <img src="/doce.png" alt="Pão-do-Céu">
                 <h3>Pão-do-Céu Sweets</h3>
                 <h4>by Ricardo Golvea</h4>
             </div>
             <div class="card" id="asinhas">
-                <img src="../public/assets/asinhas.png" alt="Asinhas de Frango">
+                <img src="/asinhas.png" alt="Asinhas de Frango">
                 <h3>Barbecue Chicken Wings</h3>
                 <h4>by Vania Steroski</h4>
             </div>
             <div class="card" id="burger">
-                <img src="../public/assets/burger.png" alt="Burger">
+                <img src="/burger.png" alt="Burger">
                 <h3>Triple Bacon Burger</h3>
                 <h4>by Jorge Relato</h4>
             </div>
             <div class="card" id="pizza">
-                <img src="../public/assets/pizza.png" alt="Pizza">
+                <img src="/pizza.png" alt="Pizza">
                 <h3>Pizza 4 Seasons</h3>
                 <h4>by Fabiana Melo</h4>
             </div>
             <div class="card" id="espaguete">
-                <img src="../public/assets/espaguete.png" alt="Espaguete">
+                <img src="/espaguete.png" alt="Espaguete">
                 <h3>Spaghetti with Garlic</h3>
                 <h4>by Júlia Kinoto</h4>
             </div>
             <div class="card" id="lasanha">
-                <img src="../public/assets/lasanha.png" alt="Lasanha">
+                <img src="/lasanha.png" alt="Lasanha">
                 <h3>Mac n' Cheese Lasagna</h3>
                 <h4>by Juliano Vieira</h4>
             </div>
             <div class="card" id="doce">
-                <img src="../public/assets/doce.png" alt="Pão-do-Céu">
+                <img src="/doce.png" alt="Pão-do-Céu">
                 <h3>Pão-do-Céu Sweets</h3>
                 <h4>by Ricardo Golvea</h4>
             </div>
             <div class="card" id="asinhas">
-                <img src="../public/assets/asinhas.png" alt="Asinhas de Frango">
+                <img src="/asinhas.png" alt="Asinhas de Frango">
                 <h3>Barbecue Chicken Wings</h3>
                 <h4>by Vania Steroski</h4>
             </div>
@@ -96,6 +96,6 @@
     <footer>
             <p>All rights reserved, Foodfy recipes.</p>
     </footer>
-    <script src="../public/scripts/scripts.js"></script>
+    <script src="/scripts.js"></script>
 </body>
 </html>
