--- a/views/index.njk
+++ b/views/index.njk
@@ -4,6 +4,10 @@
 <title>Foodfy</title>
 {%endblock%}
 
+{%block styles%}
+<link rel="stylesheet" href="/home.css">
+{%endblock%}
+
 {%block content%}
 <section class="content1">
     <div class="content">
