--- a/views/layout.njk
+++ b/views/layout.njk
@@ -5,11 +5,10 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        {% block styles %}
+        {% endblock styles %}
         <link rel="stylesheet" href="/main.css">
-        <link rel="stylesheet" href="/modal.css">
-        <link rel="stylesheet" href="/recipes.css">
-        <link rel="stylesheet" href="/home.css">
-        <link rel="stylesheet" href="/about.css">
         <title>Foodfy</title>
     </head>
 
