--- a/views/recipes.njk
+++ b/views/recipes.njk
@@ -4,6 +4,10 @@
 <title>Foodfy</title>
 {%endblock%}
 
+{%block styles%}
+<link rel="stylesheet" href="/recipes.css">
+{%endblock%}
+
 {%block content%}
 <section class="content2">
     <div class="cards">
