--- a/views/about.njk
+++ b/views/about.njk
@@ -4,6 +4,10 @@
 <title>Foodfy</title>
 {%endblock%}
 
+{%block styles%}
+<link rel="stylesheet" href="/about.css">
+{%endblock%}
+
 {%block content%}
 <section class="content">
     <div>
