--- a/views/index.njk
+++ b/views/index.njk
@@ -15,7 +15,7 @@
         <p>Learn how to build the best dishes with recipes created by professionals from all over the world.</p>
     </div>
     <div class="img-background">
-        <img src="/chef.png" alt="Chef Foodfy">
+        <img src="/main-logo.svg" alt="Chef Foodfy">
     </div>
 </section>
 <section class="content2">
