--- a/views/layout.njk
+++ b/views/layout.njk
@@ -15,7 +15,7 @@
     <body>
         <header>
             <nav class="menu">
-                <a href="/" id="logo"><img src="/logo2.png" alt="Logo Foodfy"></a>
+                <a href="/" id="logo"><img src="/logo.png" alt="Logo Foodfy"></a>
                 <a href="/about" id="about">About</a>
                 <a href="/recipes" id="recipes">Recipes</a>
             </nav>
