--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -13,13 +13,13 @@ header nav a#about {
 
 .content h2 {
     font-size: 24px;
-    color: var(--main-color);
+    color: var(--green-color);
     margin-bottom: 20px;
 }
 
 .content p {
     font-size: 18px;
-    color: #444444;
+    color: var(--main-color);
     line-height: 28px;
     margin-bottom: 30px;
 }
