--- a/views/details.njk
+++ b/views/details.njk
@@ -18,7 +18,7 @@
             </div>
             <div class="recipes-content">
                 <div class="recipe-ingredients">
-                    <h3>Ingredientes <a id="button1">ESCONDER</a></h3>
+                    <h3>Ingredients <a id="button1">HIDE</a></h3>
                     <ul>
                     {%for ingredient in item.ingredients%}
                         <li>{{ingredient}}</li>
@@ -26,7 +26,7 @@
                     </ul>
                 </div>
                 <div class="recipe-preparation">
-                    <h3>Modo de Preparo <a id="button2">ESCONDER</a></h3>
+                    <h3>How To Prepare <a id="button2">HIDE</a></h3>
                     <ul>
                     {%for prep in item.preparation%}
                         <li>{{prep}}</li>
@@ -34,7 +34,7 @@
                     </ul>
                 </div>
                 <div class="recipe-information">
-                    <h3>Informações Adicionais <a id="button3">ESCONDER</a></h3>
+                    <h3>Additional Information <a id="button3">HIDE</a></h3>
                     <p>{{item.information}}</p>
                 </div>
             </div>
