--- a/views/recipes.njk
+++ b/views/recipes.njk
@@ -14,8 +14,9 @@
         {%for item in items%}
         <div class="card" id="{{item.id}}">
             <img src="/{{item.id}}.png" alt="{{item.id}}">
+            <div class="preparation-time">{{item.time}}</div>
             <h3>{{item.title}}</h3>
-            <h4>{{item.author}}</h4>
+            <h4>by {{item.author}}</h4>
         </div>
         {%endfor%}
     </div>
