--- a/views/admin/layout.njk
+++ b/views/admin/layout.njk
@@ -16,8 +16,8 @@
         <header>
             <nav class="menu">
                 <a href="/" id="logo"><img src="/logo.png" alt="Logo Foodfy"></a>
-                <a href="/about" id="about">About</a>
-                <a href="/recipes" id="recipes">Recipes</a>
+                <a href="users/about" id="about">About</a>
+                <a href="users/recipes" id="recipes">Recipes</a>
             </nav>
         </header>
 
