--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -19,6 +19,17 @@ header nav a#recipes {
     margin-left: 16.4%;
 }
 
+h2 {
+    font-size: 24px;
+    color: var(--green-color);
+    margin: 50px 0 30px 220px;
+}
+
+.content2 .cards .card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .content2 .card:hover {
     opacity: 0.7;
     cursor: pointer;
@@ -28,27 +39,18 @@ header nav a#recipes {
     position: relative;
 }
 
-.card .preparation-time {
-    font-size: 12px;
-    position: absolute;
-    top: 108px;
-    right: 30px;
-    background-color: var(--main-color);
-    color: var(--green-color);
-    border-radius: 30px;
-    padding: 4px 8px;
-}
-
 .content2 .cards .card img {
     width: 278px;
     height: 120px;
     border-radius: 15px;
+    margin-right: 20px;
 }
 
 .content2 .cards .card h3 {
     font-size: 18px;
     color: var(--green-color);
-    margin-top: 1.8%;
+    margin-top: 1.8% 0 0.5% 0;
+    width: 200px;
 }
 
 .content2 .cards .card h4 {
@@ -57,4 +59,50 @@ header nav a#recipes {
     color: #777777;
     margin-top: 0.5%;
     margin-bottom: 2.7%;
+}
+
+.create-form .item {
+    margin-left: 16.4%;
+    margin-bottom: 4%;
+    position: relative;
+}
+
+.create-form .item input {
+    background: #FFFFFF;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    border-radius: 4px;
+    width: 940px;
+    height: 49px;
+}
+
+.create-form div:nth-child(5) input {
+    height: 260px;
+}
+
+.create-form .item a {
+    display: block;
+    text-align: left;
+    font-size: 16px;
+    color: var(--green-color);
+    text-decoration: none;
+    margin-top: 1%;
+}
+
+.create-form .item div:nth-child(1) {
+    margin-bottom: 0.7%;
+}
+
+.create-form button {
+    background: var(--main-color);
+    color: var(--green-color);
+    font-weight: bold;
+    font-size: 16px;
+    border-radius: 4px;
+    padding: 12px 16px 12px 16px;
+    cursor: pointer;
+}
+
+.create-form button:hover{
+    opacity: 0.7;
 }
