--- a/views/admin/create.njk
+++ b/views/admin/create.njk
@@ -11,7 +11,7 @@
 {%block content%}
 <h2>Create Recipe</h2>
 <section class="create-form">
-    <form action="/admin/recipes" method="post">
+    <form action="/admin/recipes" method="POST">
         <button type="submit">Save Recipe</button>
         <div class="item">
             <div>Recipe Image</div>
@@ -20,6 +20,7 @@
                     type="text"
                     name="recipeImg"
                     placeholder="http://"
+                    value="{{recipes.recipeImg}}"
                 >
             </div>
         </div>
@@ -29,6 +30,7 @@
                 <input
                     type="text"
                     name="ingredients"
+                    value="{{recipes.ingredients}}"
                 >
                 <a href="">
                     Add new ingredient
@@ -41,6 +43,7 @@
                 <input
                     type="text"
                     name="recipePrep"
+                    value="{{recipes.recipePrep}}"
                 >
                 <a href="">
                     Add new step
@@ -53,6 +56,7 @@
                 <input
                     type="text"
                     name="addInfo"
+                    value="{{recipes.addInfo}}"
                 >
             </div>
         </div>
