foodfy issues done

--- a/views/admin/create.njk
+++ b/views/admin/create.njk
@@ -62,5 +62,5 @@
         </div>
     </form>
 </section>
-<script src="/scripts.js"></script>
+<script src="/admin/scripts.js"></script>
 {%endblock%}
