--- a/views/users/details.njk
+++ b/views/users/details.njk
@@ -40,5 +40,5 @@
             </div>
     </div>
 </section>
-<script src="/scripts.js"></script>
+<script src="/users/scripts.js"></script>
 {%endblock%}
