--- a/views/users/index.njk
+++ b/views/users/index.njk
@@ -30,5 +30,5 @@
         </div>
         {%endfor%}
 </section>
-<script src="/scripts.js"></script>
+<script src="/users/scripts.js"></script>
 {%endblock%}
