--- a/views/users/recipes.njk
+++ b/views/users/recipes.njk
@@ -21,5 +21,5 @@
         {%endfor%}
     </div>
 </section>
-<script src="/scripts.js"></script>
+<script src="/users/scripts.js"></script>
 {%endblock%}
