--- a/views/users/index.njk
+++ b/views/users/index.njk
@@ -19,7 +19,7 @@
     </div>
 </section>
 <section class="content2">
-    <h2>Our recipes</h2>
+    <h2>Our Recipes</h2>
     <div class="cards">
         {%for item in items%}
         <div class="card" id="{{item.id}}">
