--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -23,6 +23,7 @@ h2 {
     font-size: 24px;
     color: var(--green-color);
     margin: 50px 0 30px 220px;
+    line-height: 34px;
 }
 
 .content2 .cards .card {
@@ -61,6 +62,17 @@ h2 {
     margin-bottom: 2.7%;
 }
 
+.form-header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.form-header #button {
+    text-align: right;
+    margin-right: 170px;
+    margin-top: 50px;
+}
+
 .create-form .item {
     margin-left: 16.4%;
     margin-bottom: 4%;
@@ -73,25 +85,29 @@ textarea {
     border-radius: 4px;
     border-radius: 4px;
     width: 940px;
-    height: 49px;
+    height: 24px;
     margin-bottom: 6px;
+    padding: 10px;
 }
 
 textarea {
     resize: none;
     font-size: 16px;
-    padding: 10px;
     height: 250px;
 }
 
-button[type="button"].add-ingredient {
+button[type="button"].add-ingredient,
+button[type="button"].add-prep {
     background: white;
     display: block;
     text-align: left;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: normal;
     color: var(--green-color);
     text-decoration: none;
     margin-top: 1%;
+    outline: none;
+    padding: 0;
 }
 
 .create-form .item div:nth-child(1) {
@@ -102,9 +118,9 @@ button[type="button"].add-ingredient {
     background: var(--main-color);
     color: var(--green-color);
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 4px;
-    padding: 12px 16px 12px 16px;
+    padding: 8px 16px 8px 16px;
     cursor: pointer;
 }
 
