--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -22,8 +22,16 @@ header nav a#recipes {
 h2 {
     font-size: 24px;
     color: var(--green-color);
-    margin: 50px 0 30px 220px;
     line-height: 34px;
+}
+
+.form-header h2,
+.content2 h2 {
+    margin: 50px 0 30px 220px;
+}
+
+.details-header h2 {
+    margin: 55px  0 24px 0;
 }
 
 .content2 .cards .card {
@@ -62,15 +70,20 @@ h2 {
     margin-bottom: 2.7%;
 }
 
-.form-header {
+.form-header,
+.details-header {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
-.form-header #button {
+.form-header #button,
+.details-header #button {
     text-align: right;
-    margin-right: 170px;
-    margin-top: 50px;
+    margin: 50px 170px 0 0;
+}
+
+.details-header #button {
+    margin-right: 0;
 }
 
 .create-form .item {
@@ -114,7 +127,8 @@ button[type="button"].add-prep {
     margin-bottom: 0.7%;
 }
 
-.create-form button {
+.create-form button,
+.details-header button {
     background: var(--main-color);
     color: var(--green-color);
     font-weight: bold;
@@ -126,4 +140,8 @@ button[type="button"].add-prep {
 
 .create-form button:hover{
     opacity: 0.7;
+}
+
+.details-header {
+    width: 940px;
 }
