--- a/views/admin/layout.njk
+++ b/views/admin/layout.njk
@@ -15,9 +15,7 @@
     <body>
         <header>
             <nav class="menu">
-                <a href="/" id="logo"><img src="/logo.png" alt="Logo Foodfy"></a>
-                <a href="users/about" id="about">About</a>
-                <a href="users/recipes" id="recipes">Recipes</a>
+                <a href="/" id="logo"><img src="/logo-white.png" alt="Logo Foodfy"></a>
             </nav>
         </header>
 
