--- a/views/users/layout.njk
+++ b/views/users/layout.njk
@@ -15,9 +15,10 @@
     <body>
         <header>
             <nav class="menu">
-                <a href="/" id="logo"><img src="/logo.png" alt="Logo Foodfy"></a>
+                <a href="/" id="logo"><img src="/logo-white.png" alt="Logo Foodfy"></a>
                 <a href="/about" id="about">About</a>
                 <a href="/recipes" id="recipes">Recipes</a>
+                <a href="/admin/recipes" id="admin">Admin Area</a>
             </nav>
         </header>
 
