--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -15,14 +15,17 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+header {
+    background-color: var(--main-color);
+}
+
 header nav {
     display: flex;
 }
 
 header nav a {
-    width: 3%;
     height: 1.7%;
-    margin: 15px 30px 0px 30px;
+    margin: 16px 32px 16px 32px;
     font-size: 16px;
     line-height: 26px;
     color: var(--green-color);
@@ -46,6 +49,11 @@ header nav a#about {
 
 header nav a#recipes {
     margin-left: 30px;
+    margin-top: 30px;
+}
+
+header nav a#admin {
+    margin-left: 340px;
     margin-top: 30px;
 }
 
