--- a/views/admin/details.njk
+++ b/views/admin/details.njk
@@ -13,7 +13,7 @@
 <section class="content">
     <div class="details-header">
         <div>
-            <h2>Recipe: {{item.title}}</h2>
+            <h2>Recipe: {{recipe.recipeName}}</h2>
         </div>
         <div id="button">
             <a type="button" href="/admin/recipes/{{item.id}}/edit">Edit Recipe</a>
@@ -21,16 +21,16 @@
         </div>
     </div>
     <div class="recipes">
-            <div class="recipe-card" id="{{item.id}}">
-                <img src="{{item.image}}" alt="{{item.id}}">
-                <h2>{{item.title}}</h2>
-                <h4>by {{item.author}}</h4>
+            <div class="recipe-card" id="{{recipe.id}}">
+                <img src="{{recipe.recipeImg}}" alt="{{recipe.recipeName}}">
+                <h2>{{recipe.recipeName}}</h2>
+                <h4>by {{recipe.recipeAuthor}}</h4>
             </div>
             <div class="recipes-content">
                 <div class="recipe-ingredients">
                     <h3>Ingredients</h3>
                     <ul>
-                    {%for ingredient in item.ingredients%}
+                    {%for ingredient in recipe.recipeIngredients%}
                         <li>{{ingredient}}</li>
                     {%endfor%}
                     </ul>
@@ -38,14 +38,14 @@
                 <div class="recipe-preparation">
                     <h3>How To Prepare</h3>
                     <ul>
-                    {%for prep in item.preparation%}
+                    {%for prep in recipe.recipePrep%}
                         <li>{{prep}}</li>
                     {%endfor%}
                     </ul>
                 </div>
                 <div class="recipe-information">
                     <h3>Additional Information</h3>
-                    <p>{{item.information}}</p>
+                    <p>{{recipe.recipeInfo}}</p>
                 </div>
             </div>
     </div>
