--- a/views/admin/recipes.njk
+++ b/views/admin/recipes.njk
@@ -22,11 +22,11 @@
         {%for item in items%}
             <div class="card" id="{{item.id}}">
                 <div>
-                    <img src="/{{item.id}}.png" alt="{{item.id}}">
+                    <img src="{{item.recipeImg}}" alt="{{item.id}}">
                 </div>
                 <div>
-                    <h3>{{item.title}}</h3>
-                    <h4>by {{item.author}}</h4>
+                    <h3>{{item.recipeName}}</h3>
+                    <h4>by {{item.recipeAuthor}}</h4>
                 </div>
             </div>
         {%endfor%}
