--- a/views/users/details.njk
+++ b/views/users/details.njk
@@ -12,15 +12,15 @@
 <section class="content">
     <div class="recipes">
             <div class="recipe-card" id="{{item.id}}">
-                <img src="{{item.image}}" alt="{{item.id}}">
-                <h2>{{item.title}}</h2>
-                <h4>by {{item.author}}</h4>
+                <img src="{{item.recipeImg}}" alt="{{item.id}}">
+                <h2>{{item.recipeName}}</h2>
+                <h4>by {{item.recipeAuthor}}</h4>
             </div>
             <div class="recipes-content">
                 <div class="recipe-ingredients">
                     <h3>Ingredients <a id="button1">HIDE</a></h3>
                     <ul>
-                    {%for ingredient in item.ingredients%}
+                    {%for ingredient in item.recipeIngredients%}
                         <li>{{ingredient}}</li>
                     {%endfor%}
                     </ul>
@@ -28,14 +28,14 @@
                 <div class="recipe-preparation">
                     <h3>How To Prepare <a id="button2">HIDE</a></h3>
                     <ul>
-                    {%for prep in item.preparation%}
+                    {%for prep in item.recipePrep%}
                         <li>{{prep}}</li>
                     {%endfor%}
                     </ul>
                 </div>
                 <div class="recipe-information">
                     <h3>Additional Information <a id="button3">HIDE</a></h3>
-                    <p>{{item.information}}</p>
+                    <p>{{item.recipeInfo}}</p>
                 </div>
             </div>
     </div>
