--- a/views/users/recipes.njk
+++ b/views/users/recipes.njk
@@ -13,10 +13,10 @@
     <div class="cards">
         {%for item in items%}
         <div class="card" id="{{item.id}}">
-            <img src="/{{item.id}}.png" alt="{{item.id}}">
-            <div class="preparation-time">{{item.time}}</div>
-            <h3>{{item.title}}</h3>
-            <h4>by {{item.author}}</h4>
+            <img src="{{item.recipeImg}}" alt="{{item.id}}">
+            <div class="preparation-time">{{item.recipeTime}}</div>
+            <h3>{{item.recipeName}}</h3>
+            <h4>by {{item.recipeAuthor}}</h4>
         </div>
         {%endfor%}
     </div>
